@@ -581,7 +581,7 @@ number to increase, say from "libstdc++.so.3.0.4" to
   std::basic_streambuf, et al.
 </li>
 
-<li> adding a non-private explicit copy constructor or destructor to a
+<li> adding an explicit copy constructor or destructor to a
 class that would otherwise have implicit versions. This will change
 the way the compiler deals with this class in by-value return
 statements or parameters: instead of being passing instances of this
